--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 			</form>
 		</div>
 	</section>
-	<footer><div>微盟weimob</div></footer>
+	<footer><div>Alex XU</div></footer>
 </div>
 
 <%- include footer %>
